Изменение контракта для фронта
